# hc-wednesday-workshop-posts

./: Cargo.toml  README.md  default.nix  package-lock.json  package.json
dna/workdir/: dna.yaml
dna/zomes/comments/: Cargo.toml
dna/zomes/comments/src/: lib.rs
dna/zomes/posts/: Cargo.toml
dna/zomes/posts/src/: lib.rs
dna/zomes/posts/src/post/: entry.rs  handlers.rs
dna/zomes/profiles/: Cargo.toml
dna/zomes/reactions/: Cargo.toml
dna/zomes/reactions/src/: lib.rs
tests/src/: index.ts  utils.ts
tests/src/posts/comments/: entry_def_0.ts
tests/src/posts/posts/: post.ts
tests/src/posts/profiles/: entry_def_0.ts
tests/src/posts/reactions/: entry_def_0.ts
ui/: index.html  package.json  tsconfig.tsbuildinfo
ui/src/: holochain-app.ts
ui/src/components/posts/posts/: create-post.ts  post-detail.ts
ui/src/types/posts/: posts.ts
workdir/: happ.yaml  web-happ.yaml
