[package]
edition = "2018"
name = "comments"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "comments"

[dependencies]
serde = "1"
derive_more = "0"
hc_zome_comments = {git = "https://github.com/holochain-open-dev/comments", rev = "for-hdk-v0.0.122", package = "hc_zome_comments"}


hdk = {version="0.0.122", features = ["encoding"]}
